# mcp-clickhouse-server

./: .dockerignore  Dockerfile  README.md  hello.py  pyproject.toml  render.yaml
.github/workflows/: ci.yaml
mcp_clickhouse/: __init__.py  chdb_prompt.py  main.py  mcp_env.py  mcp_server.py
tests/: test_chdb_tool.py  test_mcp_server.py  test_tool.py
