[project]
name = "mcp-clickhouse"
version = "0.1.0"
description = "An MCP server for ClickHouse."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
     "mcp>=1.0.0",
     "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-clickhouse = "mcp_clickhouse.main:main"

[project.urls]
Home = "https://github.com/iskakaushik/mcp-clickhouse"

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.ruff]
line-length = 100
